--- a/app/globals.css
+++ b/app/globals.css
@@ -44,72 +44,79 @@
 }
 
 :root {
-  --radius: 0.625rem;
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.145 0 0);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
-  --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
-  --secondary-foreground: oklch(0.205 0 0);
-  --muted: oklch(0.97 0 0);
-  --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
-  --accent-foreground: oklch(0.205 0 0);
-  --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.922 0 0);
-  --input: oklch(0.922 0 0);
-  --ring: oklch(0.708 0 0);
-  --chart-1: oklch(0.646 0.222 41.116);
-  --chart-2: oklch(0.6 0.118 184.704);
-  --chart-3: oklch(0.398 0.07 227.392);
-  --chart-4: oklch(0.828 0.189 84.429);
-  --chart-5: oklch(0.769 0.188 70.08);
-  --sidebar: oklch(0.985 0 0);
-  --sidebar-foreground: oklch(0.145 0 0);
-  --sidebar-primary: oklch(0.205 0 0);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.97 0 0);
-  --sidebar-accent-foreground: oklch(0.205 0 0);
-  --sidebar-border: oklch(0.922 0 0);
-  --sidebar-ring: oklch(0.708 0 0);
+  --background: hsl(253 44% 98%);
+  --foreground: hsl(253 58% 0%);
+
+  --muted: hsl(253 7% 87%);
+  --muted-foreground: hsl(253 13% 37%);
+
+  --popover: hsl(253 44% 98%);
+  --popover-foreground: hsl(253 58% 0%);
+
+  --card: hsl(253 44% 97%);
+  --card-foreground: hsl(0 0% 0%);
+
+  --border: hsl(220 13% 91%);
+  --input: hsl(220 13% 91%);
+
+  --primary: hsl(253 91% 58%);
+  --primary-foreground: hsl(253 91% 98%);
+
+  --secondary: hsl(253 5% 89%);
+  --secondary-foreground: hsl(253 5% 29%);
+
+  --accent: hsl(253 12% 82%);
+  --accent-foreground: hsl(253 12% 22%);
+
+  --destructive: hsl(339.2 90.36% 51.18%);
+  --destructive-foreground: hsl(0 0% 100%);
+
+  --ring: hsl(253 91% 58%);
+
+  --chart-1: hsl(253 91% 58%);
+  --chart-2: hsl(253 5% 89%);
+  --chart-3: hsl(253 12% 82%);
+  --chart-4: hsl(253 5% 92%);
+  --chart-5: hsl(253 94% 58%);
+
+  --radius: 0.5rem;
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
-  --foreground: oklch(0.985 0 0);
-  --card: oklch(0.205 0 0);
-  --card-foreground: oklch(0.985 0 0);
-  --popover: oklch(0.205 0 0);
-  --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.922 0 0);
-  --primary-foreground: oklch(0.205 0 0);
-  --secondary: oklch(0.269 0 0);
-  --secondary-foreground: oklch(0.985 0 0);
-  --muted: oklch(0.269 0 0);
-  --muted-foreground: oklch(0.708 0 0);
-  --accent: oklch(0.269 0 0);
-  --accent-foreground: oklch(0.985 0 0);
-  --destructive: oklch(0.704 0.191 22.216);
-  --border: oklch(1 0 0 / 10%);
-  --input: oklch(1 0 0 / 15%);
-  --ring: oklch(0.556 0 0);
-  --chart-1: oklch(0.488 0.243 264.376);
-  --chart-2: oklch(0.696 0.17 162.48);
-  --chart-3: oklch(0.769 0.188 70.08);
-  --chart-4: oklch(0.627 0.265 303.9);
-  --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.205 0 0);
-  --sidebar-foreground: oklch(0.985 0 0);
-  --sidebar-primary: oklch(0.488 0.243 264.376);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.269 0 0);
-  --sidebar-accent-foreground: oklch(0.985 0 0);
-  --sidebar-border: oklch(1 0 0 / 10%);
-  --sidebar-ring: oklch(0.556 0 0);
+  --background: hsl(253 43% 3%);
+  --foreground: hsl(253 31% 98%);
+
+  --muted: hsl(253 7% 13%);
+  --muted-foreground: hsl(253 13% 63%);
+
+  --popover: hsl(253 43% 3%);
+  --popover-foreground: hsl(253 31% 98%);
+
+  --card: hsl(253 43% 4%);
+  --card-foreground: hsl(253 31% 99%);
+
+  --border: hsl(215 27.9% 16.9%);
+  --input: hsl(215 27.9% 16.9%);
+
+  --primary: hsl(253 91% 58%);
+  --primary-foreground: hsl(253 91% 98%);
+
+  --secondary: hsl(253 7% 9%);
+  --secondary-foreground: hsl(253 7% 69%);
+
+  --accent: hsl(253 13% 14%);
+  --accent-foreground: hsl(253 13% 74%);
+
+  --destructive: hsl(339.2 90.36% 51.18%);
+  --destructive-foreground: hsl(0 0% 100%);
+
+  --ring: hsl(253 91% 58%);
+
+  --chart-1: hsl(253 91% 58%);
+  --chart-2: hsl(253 7% 9%);
+  --chart-3: hsl(253 13% 14%);
+  --chart-4: hsl(253 7% 12%);
+  --chart-5: hsl(253 94% 58%);
 }
 
 @layer base {
